<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:paddingHorizontal="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_show_toast" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_show_dialog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_open_webview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoToDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_go_to_details" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCallApi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_call_api" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_preferences" />

        <TextView
            android:id="@+id/tvApiResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_api_result_default"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:padding="8dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
